feat: 小幅度重构Http与FillHandler部分，增加代码可读性与封装程度